[metadata]
name = jinja_markdown
version= 1.200630
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
description = A jinja2 markdown tag powered with PyMdown Extensions.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/jpsca/jinja-markdown
license = Apache License Version 2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
python_requires = >=3.6,<4.0
install_requires =
    Jinja2 >= 2.11
    Pygments ~= 2.6.1
    pymdown_extensions ~= 7.1

[options.packages.find]
exclude =
    tests

[options.extras_require]
testing =
    pytest

dev =
    pytest
    flake8
    tox

[flake8]
max-complexity = 10
max-line-length = 88

statistics = true
doctests = True
accept-encodings = utf-8

select = C,E,F,W,B,B950
# W503 line break before binary operator
# E203 whitespace before ':'
# D100  Missing docstring in public module
# D101  Missing docstring in public class
# D102  Missing docstring in public method
# D103  Missing docstring in public function
# D104  Missing docstring in public package
# D105  Missing docstring in magic method
# D107  Missing docstring in __init__
ignore = W503,E203,D100,D101,D102,D103,D104,D105,D107

[tool:pytest]
addopts = --doctest-modules
